#add_library(BTEMesh BTEMesh.cpp "${StaticBTESolver_SOURCE_DIR}/includes/StaticBTESynthetic/BTEMesh.h")
add_library(Solution Solution.cpp)
# target_include_directories(BTEMesh PUBLIC "${StaticBTESolver_SOURCE_DIR}/includes")
target_link_libraries(Solution PUBLIC BTEutility StaticBTESynthetic StaticFourier )
# target_compile_features(BTEMesh PUBLIC cxx_std_14)
